<resources>
    <string name="app_name">Admin-MeriPadhai</string>

    <!-- Auth UI -->
    <string name="unknown_response">Unexpected onActivityResult response code</string>
    <string name="unknown_sign_in_response">Unknown response from AuthUI sign-in</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">An unknown error occurred</string>

    <string name="check_to_pass">I accept terms and conditions.</string>
    <string name="error_message">Please accept terms and conditions first.</string>
    <string name="launch_intro_activity">Launch intro activity</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="dob">Date of birth</string>
    <string name="mobile">Mobile no</string>
    <string name="update">Update</string>
    <string name="signinn">Update/SignIn</string>
    <string name="bookmrk">Bookmark</string>
    <string name="notification">Notification</string>
    <string name="shareapp">Share App</string>
    <string name="contact">Contact us</string>
    <string name="Subscribe">Subscribe Now</string>
    <string name="TC">Terms and condition</string>
    <string name="signin">Sign In</string>
    <string name="signout">Sign Out</string>
    <string name="see_profile">See your profile</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="signout_msg">Are you sure you want to sign out ?</string>
    <string name="user_created_updated">User profile updated successfully</string>
    <string name="title_select_course">Select Course</string>
    <string name="text_course_1">Please select a course so that we can provide most related content for you.</string>
    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="current_affairs">Current Affairs</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="profile">Profile</string>
    <string name="setting">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_select_course">Please select a course</string>
    <string name="demo_text_series">Demo Test Series</string>
    <string name="multiplayer_test_series">Multiplayer Test Series</string>
    <string name="winner_list">Winner List</string>
    <string name="header_quiz">Quiz</string>
    <string name="header_course_topic">Course Topic</string>
    <string name="header_paid_quiz">Paid Quiz</string>
    <string name="mera_doubt">Mera Doubt</string>
    <string name="text_add_video">Select category then add video link from YouTube to upload the video.</string>
    <string name="title_add_video">Manage Videos</string>
    <string name="add_videos">Add Videos</string>
    <string name="video_link">Video Link</string>
    <string name="admin_no_subcategory">No sub category found. please create one first from \'Add Category Screen\'</string>
    <string name="load_preview">Load Preview</string>
    <string name="submit">Submit</string>
    <string name="invalid_video">Can\'t retrieve video title, are you connected to the internet?</string>
    <string name="video_uploaded">Video successfully uploaded</string>
    <string name="work_in_progress">This feature will available soon.</string>
    <string name="text_course_2">Click item to edit the category or simply add a new category by tapping on \'Add Category\'</string>
    <string name="add_Category">Manage Category</string>
    <string name="text_admin_1">"Admin Panel : Here you can Add/Edit the Videos and Categories "</string>
    <string name="title_admin">Admin panel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="msg_delete">Are you sure you want to delete this video?</string>
    <string name="msg_delete_title">Delete Video</string>
    <string name="active">Active</string>
    <string name="update_category">Update Category</string>
    <string name="search">Search</string>
    <string name="update_video_count">Sync Video Count</string>
    <string name="no_data">No data available</string>
    <string name="recent_upload">Recently Uploaded</string>
    <string name="share_app_text">Hey check out my awesome app at:</string>
    <string name="user_offline">%s is offline</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="title_invite">Invite User</string>
    <string name="text_invite_1">Select student to send him invite</string>
    <string name="title_manage_current_affairs">Manage Current Affairs</string>
    <string name="text_add_affairs">Add videos to current affairs</string>
    <string name="msg_delete_success">Video deleted successfully.</string>
    <string name="msg_bookmark_success">Video saved to your favorite list successfully.</string>
    <string name="no_related_video">No related video found</string>
    <string name="related_video">Related Videos</string>
    <string name="share">Share</string>
    <string name="intro_text_1">A better learning future start here</string>
    <string name="intro_text_11">You are on the right track now</string>
    <string name="intro_text_2">Learning together to be the best we can be.</string>
    <string name="intro_text_22">I teach, therefore I learn</string>
    <string name="intro_text_3">A modern, global app for a modern, global academic experience.</string>
    <string name="intro_text_33">Education is the most powerful weapon</string>
    <string name="intro_text_4">Not every classroom has four walls.</string>
    <string name="intro_text_44">Continue to join us…</string>
    <string name="empty">""</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get Started</string>

    <string name="onboarding_slide1_title">Create an account</string>
    <string name="onboarding_slide1_subtitle">Connect with people around the world</string>
    <string name="onboarding_slide1_desc">User will be able to give you live, chat and meet
        with people nearby.</string>

    <string name="onboarding_slide2_title">Login to your account</string>
    <string name="onboarding_slide2_subtitle">Let\'s build connection with new people</string>
    <string name="onboarding_slide2_desc">Connect helps you locate the people around you who
        are closest from your home.</string>

    <string name="onboarding_slide3_title">Login to your account</string>
    <string name="onboarding_slide3_subtitle">Feel the happiness</string>
    <string name="onboarding_slide3_desc">User will be able to give you live, chat and meet
        with people nearby.</string>
    <string name="welcome">Welcome !</string>
    <string name="see_all">More</string>
    <string name="no_data_for_course">No data available for this course. Please select another course.</string>
    <string name="edit_video">Edit Video</string>
    <string name="show_video">Show Videos</string>
    <string name="delete_videos">Delete Videos</string>
    <string name="use_latest_version">Please use latest admin app</string>

</resources>