<?xml version="1.0" encoding="utf-8"?><!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">-->

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar"
        android:padding="@dimen/margin_full"
        android:text="@string/text_admin_1"
        android:textColor="@color/text_secondary" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bAddCategory"
        style="@style/button_default"
        android:layout_marginTop="@dimen/margin_full"
        android:text="@string/add_Category" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_full">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bDeleteVideos"
            style="@style/button_default"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_full"
            android:layout_marginEnd="@dimen/margin_half"
            android:layout_weight="1"
            android:text="@string/delete_videos" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bAddVideos"
            style="@style/button_default"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_half"
            android:layout_marginEnd="@dimen/margin_full"
            android:layout_weight="1"
            android:text="@string/add_videos" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bAddAffairs"
        style="@style/button_default"
        android:layout_marginTop="@dimen/margin_full"
        android:text="@string/title_manage_current_affairs" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bSyncCount"
        style="@style/button_default"
        android:layout_marginTop="@dimen/margin_full"
        android:text="@string/update_video_count" />

    <ProgressBar
        android:id="@+id/pb"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_full"
        android:visibility="gone"
        tools:visibility="visible" />

</androidx.appcompat.widget.LinearLayoutCompat><!--
</ScrollView>-->
