<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appbar"
            android:padding="@dimen/margin_full"
            android:text="@string/text_add_video"
            android:textColor="@color/text_secondary" />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appbar"
            android:layout_marginHorizontal="@dimen/margin_full"
            android:layout_marginTop="@dimen/margin_full"
            android:text="@string/title_select_course"
            android:textColor="@color/text_primary" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/sp0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_full"
            android:layout_marginTop="@dimen/margin_half"
            android:background="@drawable/rounded_edittext"
            android:minHeight="@dimen/size_toolbar_icon"
            android:visibility="gone"
            tools:listitem="@layout/support_simple_spinner_dropdown_item"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/sp1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_full"
            android:layout_marginTop="@dimen/margin_half"
            android:background="@drawable/rounded_edittext"
            android:minHeight="@dimen/size_toolbar_icon"
            android:visibility="gone"
            tools:listitem="@layout/support_simple_spinner_dropdown_item"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/sp2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_full"
            android:layout_marginTop="@dimen/margin_half"
            android:background="@drawable/rounded_edittext"
            android:minHeight="@dimen/size_toolbar_icon"
            android:visibility="gone"
            tools:listitem="@layout/support_simple_spinner_dropdown_item"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bEdit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/row_button_height"
            android:layout_marginHorizontal="@dimen/margin_full"
            android:layout_marginTop="@dimen/margin_full"
            android:background="@drawable/rounded_edittext"
            android:text="@string/show_video"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:visibility="gone"
            tools:visibility="visible" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>