<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/onboardingRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/oboarding_main_scene">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/slider"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
        android:id="@+id/page_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:dotsColor="@color/colorPurple"
        app:dotsCornerRadius="8dp"
        app:dotsSize="@dimen/margin_half"
        app:dotsSpacing="@dimen/margin_half"
        app:dotsStrokeColor="@color/colorPurple"
        app:dotsStrokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton.OnBoardTextButton"
        android:layout_marginStart="@dimen/margin_full"
        android:layout_marginEnd="@dimen/margin_full"
        android:layout_marginBottom="@dimen/margin_full"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@+id/page_indicator" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_full"
        android:backgroundTint="@color/colorPurple"
        android:paddingStart="@dimen/margin_duper"
        android:paddingTop="@dimen/margin_full"
        android:paddingEnd="@dimen/margin_duper"
        android:paddingBottom="@dimen/margin_full"
        android:text="@string/get_started"
        android:textColor="@color/white"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_indicator" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/skipBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton.OnBoardTextButton"
        android:layout_marginStart="@dimen/margin_full"
        android:layout_marginEnd="@dimen/margin_full"
        android:layout_marginBottom="@dimen/margin_full"
        android:text="@string/skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_indicator" />
</androidx.constraintlayout.motion.widget.MotionLayout>